<resources>
    <string name="app_name">FerramentaDeBolso</string>
    <string name="txtCredito">By Zocarato</string>
    <string name="txtData">Data</string>
    <string name="txtHora">Hora</string>

    <string name="TamanhoFonteBotoes">20dp</string>


    <string name="txtBtnEletrica">Eletrica</string>
    <string name="txtBtnLimparEletrica">Limpar</string>
    <string name="txtBtnCalcularEletrica">Calcular</string>
    <string name="txtTituloEletrica">Elétrica</string>
    <string name="txtTensao">Tensão (V)</string>
    <string name="txtPotencia">Potencia (W)</string>
    <string name="txtResistencia">Resistencia (Ohm)</string>
    <string name="txtBtnGrandezasEletricas">Grandezas Eletricas</string>
    <string name="txtBtnDimensionamento">Dimensionamento</string>
    <string name="txtBtnQuedaDeTensao">Queda de Tensao</string>
    <string name="txtTituloDimensionamento">Dimensionamento</string>

    <string name="txtTituloComprimento">Comprimento</string>
    <string name="txtBtnCalcular">Calcular</string>




    <string name="txtTutiloQuedaDeTensao">Queda de Tensão</string>




    <string name="txtDistancia">Distância</string>

    <string name="txtBitolaCabo">Cabo: </string>
    <string name="txtDsjuntor">Disjuntor: </string>


    <string name="txtCorrente">Corrente (A)</string>


    <string name="txtComprimento">Comprimento</string>
    <string name="txtHintMilimetro">Milímetro</string>
    <string name="txtHintPolegada">Polegadas</string>
    <string name="TxtTituloTabelas">Tabela</string>
    <string name="txtTabelaVoltarPlegadasMilimetros">Voltar</string>


    <string name="txtTituloPressao">Pressão</string>
    <string name="txtBar">Bar</string>
    <string name="txtPsi">PSI</string>
    <string name="txtBtnLimparPressao">limpar</string>
    <string name="txtBtnCalcularPressao">Calcular</string>
    <string name="txtBtnTabelaPolegadaMilimetro">Info</string>


    <string name="txtTemperatura">Temperatura</string>
    <string name="txtCelsus">Celsus</string>
    <string name="txtFiren">Fahrenheit </string>
    <string name="txtButtonCalcularTemparatura">Calcular</string>

    <string name="txtButtonComprimentos">Comprimento</string>
    <string name="txtButtonCalcularComprimentos">Calcular</string>
    <string name="txtButtonPressao">Pressão</string>
    <string name="txtButtonTemperatura">Temperatura</string>
    <string name="txtButtonVoltarMenu">Voltar</string>
    <string name="txtButtonLimpar">Limpar</string>


</resources>
