<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MenuEletricaActivity">

        <ImageView
            android:id="@+id/imgLogoEletricaMenu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="Icone menu eletrica"
            app:srcCompat="@drawable/logo_eletrica" />

        <TextView
            android:id="@+id/txtMenuEletrico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="Texto titulo menu eletrica"
            android:text="@string/txtTituloEletrica"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnGrandezasEletricas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="50dp"
            android:contentDescription="Botão menu grandezas eletricas"
            android:text="@string/txtBtnGrandezasEletricas"
            android:textSize="@dimen/tamanhoFonteBotao" />

        <Button
            android:id="@+id/btnDimensionamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/txtBtnDimensionamento"
            android:textSize="@dimen/tamanhoFonteBotao" />

        <Button
            android:id="@+id/btnQuedaDeTensao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/txtBtnQuedaDeTensao"
            android:textSize="@dimen/tamanhoFonteBotao" />

        <Button
            android:id="@+id/btnVoltarMenuEletrica2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/txtButtonVoltarMenu"
            android:textSize="@dimen/tamanhoFonteBotao" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
