<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundoPadrao"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".QuedaDeTensaoActivity">

        <ImageView
            android:id="@+id/imgLogoEletricaQueda"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="Ícone menu queda de tensão"
            app:srcCompat="@drawable/logo_eletrica" />

        <TextView
            android:id="@+id/txtQuedaDeTensao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="Título queda de tensão"
            android:text="@string/txtTutiloQuedaDeTensao"
            android:textColor="@color/corTextoPadrao"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTensaoDimensionamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:contentDescription="Texto do campo de tensão"
                        android:text="@string/txtTensao"
                        android:textColor="@color/corTextoPadrao"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/editTensaoQueda"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_rounded_background"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCorrenteDimensionamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:contentDescription="Texto do campo de corrente"
                        android:text="@string/txtCorrente"
                        android:textColor="@color/corTextoPadrao"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/editCorrenteQueda"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_rounded_background"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:gravity="center" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtBitolaDimensionamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:contentDescription="Título do campo cabo"
                        android:text="@string/txtBitolaCabo"
                        android:textColor="@color/corTextoPadrao"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/editBitolaQueda"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_rounded_background"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"

                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtDistanciaQueda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:contentDescription="Texto distância"
                        android:text="@string/txtDistancia"
                        android:textColor="@color/corTextoPadrao"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/editDistanciaQueda"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_rounded_background"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtResultadoQueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnCalcularQuedaDeTensao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/txtBtnCalcularEletrica"
            android:textSize="@dimen/tamanhoFonteBotao" />

        <Button
            android:id="@+id/btnVoltarQuedaDeTensao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/txtButtonVoltarMenu"
            android:textSize="@dimen/tamanhoFonteBotao" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
